# insync-recruitment

./: .gitignore  CLAUDE.md  README.md
insync-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION.sql  README.md  docker-compose.yml  pyproject.toml  railway.toml
insync-backend/scripts/: generate_corpus.py  smoke_real.py  smoke_resend.py  smoke_slack.py  smoke_supabase.py
insync-backend/src/: config.py  main.py
insync-backend/src/api/: deps.py  middleware.py
insync-backend/src/api/routes/: capture.py  health.py  lead.py  sample.py  score.py  webhook.py
insync-backend/src/core/graphs/: nodes.py  scoring_graph.py  state.py
insync-backend/src/core/llm/: client.py  prompts.py
insync-backend/src/core/parsers/: __init__.py  llamaparse.py  text.py
insync-backend/src/core/scoring/: validator.py
insync-backend/src/db/: supabase.py
insync-backend/src/db/repositories/: events.py  leads.py  prospects.py  sessions.py
insync-backend/src/schemas/: capture.py  common.py  score.py
insync-backend/src/services/: cache.py  crm_webhook.py  email_sender.py  file_validator.py  limiter.py  sanitizer.py  slack.py
insync-backend/src/services/email_templates/: results.html.jinja  results.txt.jinja
insync-backend/tests/: conftest.py
insync-backend/tests/fixtures/: manifest.json
insync-backend/tests/fixtures/jds/: cdl_driver_columbus.txt  dock_worker_charlotte.txt  forklift_atlanta.txt  picker_packer_phoenix.txt  warehouse_dallas.txt
insync-backend/tests/fixtures/resumes/cdl_driver_columbus/: moderate_04_michael_anderson.txt  moderate_05_michael_thompson.txt  moderate_06_michael_johnson.txt  strong_00_michael_thompson.txt  strong_01_michael_thompson.txt  strong_02_michael_thompson.txt  strong_03_michael_thompson.txt  weak_07_jordan_smith.txt  weak_08_emily_johnson.txt  weak_09_emily_johnson.txt
insync-backend/tests/fixtures/resumes/dock_worker_charlotte/: moderate_04_michael_johnson.txt  moderate_05_samuel_rodriguez.txt  moderate_06_michael_johnson.txt  (+7 more)
insync-backend/tests/quality/: conftest.py  test_band_accuracy.py  test_consistency.py  test_top_pick.py
insync-backend/tests/unit/: test_hardening.py  test_score_route_mocked.py  test_smoke.py  test_validator.py
(+42 files in other folders)
