[project]
name = "insync-backend"
version = "0.1.0"
description = "Insync Recruitment AI Resume Screener backend — FastAPI + LangGraph"
requires-python = ">=3.11,<3.13"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.3",

    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",

    # LLM + agent orchestration
    "openai>=1.54.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.20",
    "tiktoken>=0.8.0",

    # Resume parsing
    "llama-parse>=0.5.10",
    "llama-index-core>=0.11.20",

    # Persistence
    "supabase>=2.10.0",

    # Cache + rate limit backend
    "redis>=5.2.0",
    "slowapi>=0.1.9",

    # HTTP + retries
    "httpx>=0.27.0",
    "tenacity>=9.0.0",

    # Email + PDF
    "resend>=2.4.0",
    "jinja2>=3.1.4",
    "weasyprint>=63.0",

    # Logging
    "loguru>=0.7.2",

    # File handling
    "python-magic>=0.4.27; sys_platform != 'win32'",
    "python-magic-bin>=0.4.14; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "respx>=0.21.1",
    "freezegun>=1.5.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# One event loop for the whole session — required by tests that share an async
# OpenAI client + semaphore singleton (module-level state binds to a loop).
asyncio_default_test_loop_scope = "session"
asyncio_default_fixture_loop_scope = "session"
addopts = "-ra --strict-markers"
markers = [
    "integration: needs real Supabase/OpenAI/LlamaParse keys",
    "quality: expensive end-to-end scoring quality tests (gated by QUALITY_TESTS=1)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "RET", "SIM"]
ignore = ["E501", "S101"]  # line-length handled by formatter; allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
